tests/baselines/reference/exportAlreadySeen.errors.txt
==== tests/cases/compiler/exportAlreadySeen.ts (10 errors) ====
    module M {
        export export var x = 1;
               ~~~~~~
!!! exportAlreadySeen.ts(2,12): error TS1030: 'export' modifier already seen.
        export export function f() { }
               ~~~~~~
!!! exportAlreadySeen.ts(3,12): error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! exportAlreadySeen.ts(5,12): error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! exportAlreadySeen.ts(6,16): error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! exportAlreadySeen.ts(7,16): error TS1030: 'export' modifier already seen.
        }  
    }
    
    declare module A {
        export export var x;
               ~~~~~~
!!! exportAlreadySeen.ts(12,12): error TS1030: 'export' modifier already seen.
        export export function f()
               ~~~~~~
!!! exportAlreadySeen.ts(13,12): error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! exportAlreadySeen.ts(15,12): error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! exportAlreadySeen.ts(16,16): error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! exportAlreadySeen.ts(17,16): error TS1030: 'export' modifier already seen.
        }
    }